--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,17 @@
 .vh-100 {
-  height: 100vh !important;
+  height: calc(100vh - 112px) !important;
+}
+
+.bg-card {
+  background-color: #F8F9FA !important;
+}
+
+.bg-navbar {
+  background-color: #aadbfd !important;
+}
+
+@media (min-width: 768px){
+  .container-sm {
+      max-width: 720px !important;
+  }
 }
